CHANGES IN VERSION 1.9.2
------------------------
 o gheatmap support handling collapsed tree <2017-06-29, Thu>
   + https://github.com/GuangchuangYu/ggtree/issues/137

CHANGES IN VERSION 1.9.1
------------------------
 o now mapping parameter will passed to segment layer in geom_tiplab(align=T) <2017-06-19, Mon>
 o geom_cladelabel support `angle="auto"` for circular layout tree <2017-05-05, Fri>

CHANGES IN VERSION 1.8.0
------------------------
 o BioC 3.5 release <2017-04-26, Wed>

CHANGES IN VERSION 1.7.11
------------------------
 o remove layout.method parameter <2017-04-20, Thu>
   + https://github.com/GuangchuangYu/ggtree/issues/118#issuecomment-295130818
   + https://github.com/GuangchuangYu/ggtree/issues/125

CHANGES IN VERSION 1.7.10
------------------------
 o add message for subview, inset, phylopic, theme_transparent and theme_inset <2017-03-23, Thu>
   + will be defunct in version >= 1.9.0
   + user should use ggimage package to annotate tree with graphic object or image file
 o update subview to support mainview produced by `ggplot() + layers` <2017-03-13, Mon>

CHANGES IN VERSION 1.7.9
------------------------
 o fixed geom_range to support height_0.95_HPD <2017-03-03, Fri>
 o fixed geom_tiplab(geom='label') <2017-03-02, Thu>
   + https://github.com/GuangchuangYu/ggtree/issues/115

CHANGES IN VERSION 1.7.8
------------------------
 o get_taxa_name now sorted by taxa position and also support whole tree <2017-03-01, Wed>
 o unrooted layout support branch.length="none", fixed #114 <2017-03-01, Wed>
 o remove apeBootstrap and raxml object support as they were removed from treeio <2017-02-28, Tue>

CHANGES IN VERSION 1.7.7
------------------------
 o supports parse="emoji" in geom_cladelabel, geom_text2, geom_label2, geom_tiplab, geom_tiplab2 <2017-02-16, Thu>
 o aes(subset) now support logical vector contains NA <2017-02-16, Thu>
 o add legend transparency to theme_transparent <2017-02-13, Mon>
   + <https://github.com/GuangchuangYu/ggtree/pull/112>